# bearing

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE.md.snippet  KEYBINDINGS.md  Makefile  README.md  WORKTREES.md  go.mod  install.sh  projects.jsonl
.github/workflows/: ci.yml
.turbo/cache/: 30914b4dc2cba88c-meta.json  9f557c2b2e5aebea-meta.json  9f557c2b2e5aebea.tar.zst  ab0d9d6810d5f7d9-meta.json
cmd/bearing/: main.go
cmd/worktree-check/: main.go
cmd/worktree-cleanup/: main.go
cmd/worktree-list/: main.go
docs/: package-lock.json  package.json
docs/public/: llms.txt
hooks/: validate-worktree.sh
scripts/: bearing-ai  plan-pull  plan-push  plan-sync  worktree-check  worktree-cleanup  worktree-new  worktree-recover  worktree-status  worktree-sync
test/: conftest.py  requirements.txt  run_tests.sh  smoke-test.sh  test_integration.py
tui/: Makefile  README.md  bearing-tui  pyproject.toml
tui/bearing_tui/: __main__.py  app.py  state.py
tui/bearing_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tui/bearing_tui/styles/: app.tcss
tui/bearing_tui/widgets/: __init__.py  details.py  plans.py  plans_table.py  projects.py  prs.py  tree_view.py  worktrees.py
tui/scripts/: generate_screenshots.py
tui/tests/: __init__.py  conftest.py  test_adversarial.py  test_app.py  test_comprehensive.py  test_keybindings.py  test_plans_screen.py  test_prs.py  test_session.py  test_visual_regression.py
tui/tests/mock_data/: __init__.py  scenarios.py
web/: app.js  index.html  lib.js  package.json  playwright.config.js  style.css
(+89 files in other folders)
