[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bearing-tui"
version = "0.1.0"
description = "Beautiful TUI for Bearing worktree management"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.40.0",
    "rich>=13.0.0",
]

[project.scripts]
bearing-tui = "bearing_tui.__main__:main"
